--- a/style.css
+++ b/style.css
@@ -1,83 +1,105 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(72deg, #1a397b 35%, #a0afe2, #597df1 99%); ;
-}
-
-.content {
-    height: 520px;
-    width: 935px;
-    border-radius: 20px;
-    overflow: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
-
-.content .slide img {
-    height: 100%;
+#slideshow { 
+    margin: 0 auto; 
+    position: relative; 
     width: 100%;
+    padding: 1% 1% 56.25% 1%; /*56.25 is for 16x9 resolution*/
+		border-radius:20px;
+		background: rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(0,0,0,0.6);
+  box-sizing:border-box;
 }
 
-.navigation {
-    position: absolute;
-    bottom: 160px;
-    left: 850px;
-    display: flex;
+#slideshow > div { 
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    right: 10px; 
+    bottom: 10px; 
 }
 
-.bar {
+#slideshow > div > img {
+	width:100%;
+	height:100%;
+	border-radius:20px;
+}
 
-    width: 15px;
-    height: 15px;
-    border: 2px solid white;
-    margin: 6px;
-    border-radius: 15px;
-    cursor: pointer;
-    transform: .5s ease;
+#slideshow:hover i, #slideshow:hover .slider-dots{
+	opacity: 1;
+	}
+
+.slidebtn {
+	z-index:99;
+	background:transparent;
+	outline:none;
+	border:none;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+	padding:0 10px 0 10px;
+	}
+
+.slidebtn:active,
+.slidedtn:focus {
+	outline:none;}
+	
+.slidebtn i {
+	color:#FFF;
+	font-size:72px;
+	opacity: 0.2;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+
+	}
+
+.prev {
+    position: absolute; 
+    top: 10px; 
+    left: 10px; 
+    bottom: 10px;
+}
+
+.next {
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
+    bottom: 10px;
+}
+
+
+.slider-dots {
+	opacity: 0.2;
+  list-style: none;
+  display: inline-block;
+  padding-left: 0;
+  margin-bottom: 0;
+  position:absolute;
+  left:50%;
+  bottom:3%;
+  transform: translate(-50%, 0);
+  z-index:99;
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
 
 }
 
-.bar:hover {
-    background-color: white;
+.slider-dots li {
+  color: #000;
+  display: inline;
+  font-size: 48px;
+  margin-right: 5px;
+  cursor:pointer;
 }
 
-input {
-  display: none;
+.slider-dots li.active-dot {
+  color: #fff;
 }
 
-.slides {
-    display: flex;
-    width: 500%;
-    height: 100%;
-}
-
-.slide {
-    width: 20%;
-    transition: .6s;
-}
-
-#slide1:checked ~ .s1 {
-    margin-left: 0;
-} 
-
-#slide2:checked ~ .s1 {
-    margin-left: -20%;
-} 
-
-#slide3:checked ~ .s1 {
-    margin-left: -40%;
-} 
-
-#slide4:checked ~ .s1 {
-    margin-left: -60%;
-} 
-
-#slide5:checked ~ .s1 {
-    margin-left: -80%;
-} 
+/*
+JQUERY SLIDER BY JohnRostislavovich - https://codepen.io/JohnRostislavovich
+ALL YOU HAVE TO DO:
+-copy the whole code html, css & js
+-include jquery lib
+-change the images
+*/
