--- a/style.css
+++ b/style.css
@@ -7,3 +7,113 @@ body {
 	justify-content: center;
 	align-items: center;
 }
+
+.slider{
+	margin: 0 auto;
+	width: 800px;
+	height: 400px;
+	overflow: hidden;
+}
+
+.slides{
+	widht: 400%;
+	height: 400px;
+	display: flex;
+}
+
+.slides input {
+	display: none;
+}
+
+.slide{
+	width: 25%;
+	position: relative;
+}
+
+.slide{
+	width: 800px;
+}
+
+.manual-navigation{
+	position: absolute;
+	width: 800px;
+	margin-top: -40px;
+	display: flex;
+	justify-content: center;
+}
+
+.manual-btn{
+	border: 2px solid #FFF;
+	padding: 5px;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: 1s;
+}
+	
+.manual-btn:not(:last-child){
+	margin-right: 20px;
+}
+
+.manual-btn:hover{
+	background-color: #FFF;
+}
+
+#radio1:checked ~ .first{
+	margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+	margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+	margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+	margin-left: -60%;
+}
+
+#radio5:checked ~ .first{
+	margin-left: -75% ;
+}
+
+.navigatio-auto div{
+	border: 2px solid #fbaa26;
+	padding: 5px;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: 1s;
+}
+
+.navigation-auto{
+	position: absolute;
+	width: 800px;
+	margin-top: 360px;
+	display: flex;
+	justify-content: center;
+}
+
+.navigation-auto div:not(:last-child){
+	margin-right: 20px;
+}
+
+#radio1:checked ~ navigation-auto .auto-btn1{
+	background-color: #FFF;
+}
+	
+#radio2:checked ~ navigation-auto .auto-btn2{
+	background-color: #FFF;
+}
+
+#radio3:checked ~ navigation-auto .auto-btn3{
+	background-color: #FFF;
+}
+
+#radio4:checked ~ navigation-auto .auto-btn4{
+	background-color: #FFF;
+}
+
+#radio5:checked ~ navigation-auto .auto-btn5{
+	background-color: #FFF;
+}
