--- a/slide.css
+++ b/slide.css
@@ -8,7 +8,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgb(4, 21, 36, 0);
+  background: rgba(4, 21, 36, 0);
 }
 
 .slide{
